# apps/backend/openapi/openapi.json
@@ -104,6 +104,41 @@
         ]
       }
     },
+    "/api/v1/quizzes/{id}/duplicate": {
+      "post": {
+        "operationId": "QuizzesController_duplicate",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/QuizDto"
+                }
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ],
+        "tags": [
+          "quizzes"
+        ]
+      }
+    },
     "/api/v1/quizzes/{id}": {
       "get": {
         "operationId": "QuizzesController_get",
